// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IfElseTree component > renders else correctly 1`] = `
<div>
  <div
    class="MuiBox-root css-n8b9os"
  >
    <div
      class="MuiBox-root css-15r38cd"
    >
      If
      <div
        class="MuiBox-root css-1jbq9h"
      >
        <div
          aria-multiline="true"
          autocapitalize="false"
          autocorrect="false"
          contenteditable="true"
          data-slate-editor="true"
          data-slate-node="value"
          role="textbox"
          spellcheck="false"
          style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
          zindex="-1"
        >
          <div
            data-slate-node="element"
            style="position: relative;"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-leaf="true"
                spellcheck="false"
              >
                <span
                  data-slate-string="true"
                >
                  true
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-90szgu"
    >
      <span>
        <div>
          'room1' to 'room2': closet
        </div>
      </span>
    </div>
    <div
      class="MuiBox-root css-1lzl05c"
    >
      <div
        aria-disabled="true"
        class="MuiButtonBase-root Mui-disabled MuiChip-root MuiChip-filled Mui-disabled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-filledDefault css-13cuktm-MuiButtonBase-root-MuiChip-root"
        role="button"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorDefault css-i4bv87-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        <span
          class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
        >
          elseIf
        </span>
      </div>
    </div>
    <div
      class="MuiBox-root css-klha72"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="DeleteIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="MuiBox-root css-n8b9os"
  >
    <div
      class="MuiBox-root css-15r38cd"
    >
      Else
    </div>
    <div
      class="MuiBox-root css-90szgu"
    >
      <span>
        <div>
          'room1' to 'room3': lobby
        </div>
      </span>
    </div>
    <div
      class="MuiBox-root css-1lzl05c"
    />
    <div
      class="MuiBox-root css-klha72"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="DeleteIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`IfElseTree component > renders elseif correctly 1`] = `
<div>
  <div
    class="MuiBox-root css-n8b9os"
  >
    <div
      class="MuiBox-root css-15r38cd"
    >
      If
      <div
        class="MuiBox-root css-1jbq9h"
      >
        <div
          aria-multiline="true"
          autocapitalize="false"
          autocorrect="false"
          contenteditable="true"
          data-slate-editor="true"
          data-slate-node="value"
          role="textbox"
          spellcheck="false"
          style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
          zindex="-1"
        >
          <div
            data-slate-node="element"
            style="position: relative;"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-leaf="true"
                spellcheck="false"
              >
                <span
                  data-slate-string="true"
                >
                  true
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-90szgu"
    >
      <span>
        <div>
          'room1' to 'room2': closet
        </div>
      </span>
    </div>
    <div
      class="MuiBox-root css-1lzl05c"
    >
      <div
        aria-disabled="true"
        class="MuiButtonBase-root Mui-disabled MuiChip-root MuiChip-filled Mui-disabled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-filledDefault css-13cuktm-MuiButtonBase-root-MuiChip-root"
        role="button"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorDefault css-i4bv87-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        <span
          class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
        >
          elseIf
        </span>
      </div>
    </div>
    <div
      class="MuiBox-root css-klha72"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="DeleteIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="MuiBox-root css-n8b9os"
  >
    <div
      class="MuiBox-root css-15r38cd"
    >
      Else If
      <div
        class="MuiBox-root css-1jbq9h"
      >
        <div
          aria-multiline="true"
          autocapitalize="false"
          autocorrect="false"
          contenteditable="true"
          data-slate-editor="true"
          data-slate-node="value"
          role="textbox"
          spellcheck="false"
          style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
          zindex="-1"
        >
          <div
            data-slate-node="element"
            style="position: relative;"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-leaf="true"
                spellcheck="false"
              >
                <span
                  data-slate-string="true"
                >
                  false
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-90szgu"
    >
      <span>
        <div>
          'room1' to 'room3': lobby
        </div>
      </span>
    </div>
    <div
      class="MuiBox-root css-1lzl05c"
    >
      <div
        aria-disabled="true"
        class="MuiButtonBase-root Mui-disabled MuiChip-root MuiChip-filled Mui-disabled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-filledDefault css-13cuktm-MuiButtonBase-root-MuiChip-root"
        role="button"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorDefault css-i4bv87-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        <span
          class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
        >
          elseIf
        </span>
      </div>
      <div
        aria-disabled="true"
        class="MuiButtonBase-root Mui-disabled MuiChip-root MuiChip-filled Mui-disabled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-filledDefault css-13cuktm-MuiButtonBase-root-MuiChip-root"
        role="button"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorDefault css-i4bv87-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        <span
          class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
        >
          else
        </span>
      </div>
    </div>
    <div
      class="MuiBox-root css-klha72"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="DeleteIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`IfElseTree component > renders single statement correctly 1`] = `
<div>
  <div
    class="MuiBox-root css-n8b9os"
  >
    <div
      class="MuiBox-root css-15r38cd"
    >
      If
      <div
        class="MuiBox-root css-1jbq9h"
      >
        <div
          aria-multiline="true"
          autocapitalize="false"
          autocorrect="false"
          contenteditable="true"
          data-slate-editor="true"
          data-slate-node="value"
          role="textbox"
          spellcheck="false"
          style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
          zindex="-1"
        >
          <div
            data-slate-node="element"
            style="position: relative;"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-leaf="true"
                spellcheck="false"
              >
                <span
                  data-slate-string="true"
                >
                  true
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-90szgu"
    >
      <span>
        <div>
          'room1' to 'room2': closet
        </div>
        <div>
          'room1' to 'room3': lobby
        </div>
      </span>
    </div>
    <div
      class="MuiBox-root css-1lzl05c"
    >
      <div
        aria-disabled="true"
        class="MuiButtonBase-root Mui-disabled MuiChip-root MuiChip-filled Mui-disabled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-filledDefault css-13cuktm-MuiButtonBase-root-MuiChip-root"
        role="button"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorDefault css-i4bv87-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        <span
          class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
        >
          elseIf
        </span>
      </div>
      <div
        aria-disabled="true"
        class="MuiButtonBase-root Mui-disabled MuiChip-root MuiChip-filled Mui-disabled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-filledDefault css-13cuktm-MuiButtonBase-root-MuiChip-root"
        role="button"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorDefault css-i4bv87-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        <span
          class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
        >
          else
        </span>
      </div>
    </div>
    <div
      class="MuiBox-root css-klha72"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="DeleteIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
